# RESX

./: .gitignore  COMMANDS.md  Cargo.toml  README.md
.cargo/: config.toml
src/: cfgview.rs  color.rs  config.rs  disasm.rs  edr.rs  follow_output.rs  follow_scan.rs  follow_trace.rs  intelli.rs  main.rs  metadata.rs  output.rs  pdb.rs  pe.rs  recomp.rs  search.rs  symbols.rs  thunk.rs  yara.rs
src/commands/: cfg.rs  dump.rs  follow.rs  locate.rs  mod.rs  peinfo.rs  show_eat.rs  show_iat.rs  show_syms.rs
