[package]
name = "resx"
version = "1.0.0"
edition = "2021"
description = "Resolve exports and symbols in Windows DLLs — TitanToolchain"

[dependencies]
iced-x86 = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
clap         = { version = "4", features = ["derive"] }
rayon        = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
